--- a/pedsim_simulator/package.xml
+++ b/pedsim_simulator/package.xml
@@ -30,6 +30,7 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>tf2</depend>
+  <depend>hunav_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
